# devvating

./: .devvating.example.json  .env.example  .gitignore  DISENO.md  LICENSE  README.es.md  README.md  pyproject.toml
.github/workflows/: tests.yml
devvating/: __init__.py  __main__.py  agentes.py  appconfig.py  auditor.py  config.py  debate.py  ejecutar.py  executor.py  gitutil.py  historial.py  hub.py  limpiar.py  orchestrator.py  pricing.py  pruebavida.py  registro.py  reporte.py  roles.py  rotation.py
devvating-ui/: index.html  package-lock.json  package.json  vite.config.ts
devvating-ui/src/: App.css  App.tsx  index.css
devvating/adapters/: __init__.py  base.py  claude.py  cli.py  gemini.py
devvating/tools/: __init__.py  readonly.py  registry.py
docs/: PROTOCOLO.md
tests/: conftest.py  test_auditor.py  test_claude_adapter.py  test_cli_adapters.py  test_config.py  test_ejecutar.py  test_executor.py  test_gemini_adapter.py  test_gitutil.py  test_hub.py  test_limpiar.py  test_orchestrator.py  test_pruebavida.py  test_registro.py  test_reporte.py  test_resiliencia.py  test_resume.py  test_roster.py  test_tools.py  test_usage.py
