[project]
name = "devvating"
version = "0.1.0"
description = "Multi-agent debate room for software development (Claude + Gemini)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "D4RK3R (Luis Penagos)", email = "penagosluis95@gmail.com" }]
keywords = ["multi-agent", "debate", "llm", "developer-tools", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "rich>=13",
]

[project.urls]
Repository = "https://github.com/D4rk3r-03/devvating"
Issues = "https://github.com/D4rk3r-03/devvating/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
devvating = "devvating.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["devvating*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
